# kwick

./: Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  fonts.rs  history.rs  icons.rs  launch.rs  lua_host.rs  main.rs  matcher.rs  startup.rs  tray.rs  winctl.rs
src/providers/: apps.rs  folders.rs  mod.rs  pathbin.rs  systools.rs
