[package]
name = "kwick"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.32"
nucleo-matcher = "0.3"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
walkdir = "2"
global-hotkey = "0.6"
tray-icon = "0.19"
urlencoding = "2"
raw-window-handle = "0.6"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
